btsync-gui (0.8.0-1) unstable; urgency=low

  * Added I18N support (Closes #102)
  * Added German translation by Leo (Closes #103)
  * Added Dutch translation by Jasper (Closes #108)
  * Added Italian translation by Leo & Andrea (Closes #104)
  * Added Spanish translation by Jose Luis Tirado (Closes #106)
  * Added Russian translation by Alex Novo (Closes #112)

 -- Leo Moll <leo.moll@yeasoft.com>  Mon, 17 Mar 2014 17:19:36 +0100

btsync-gui (0.7.3-1) unstable; urgency=low

  * Added function for editing the .SyncIgnore file (Closes #98)
  * "Open Manual" renamed to the more correct "Open Original Manual"
  * Fixed occasional malfunction in "Open Web UI" (Closes #100)
  * Added menu item in folders context menu for editing the
    .SyncIgnore file (Closes #98)

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 15 Mar 2014 18:04:23 +0100

btsync-gui (0.7.2-1) unstable; urgency=low

  * Added iconic display of peer connection status
  * Updated documentation and man pages
  * Probably fixed icon scaling issue on high definition displays
 
 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 14 Mar 2014 17:36:20 +0100

btsync-gui (0.7.1-1) unstable; urgency=low

  * Fixed broken build on Launchpad (Closes #93)
  * Fixed crash on --savedefaults (Closes #97)
  * Setting --webui is not also deleted on --cleardefaults

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 14 Mar 2014 00:11:18 +0100

btsync-gui (0.7-1) unstable; urgency=low

  * Added support for suspend and resume (Closes #82)
  * Implemented shutdown handlers and provided more consistent
    agent startup behaviour (Closes #78)
  * Fixed security issue with agent configuration file (Closes #81)
  * Windows size is now persistent (Closes #77)
  * Added the possibility to make the web UI of the local agent
    accessible and to store default settings (Closes #83)
  * Implemented random per session credentials (Closes #67)
  * Fixed broken open SyncArchive and Folder when folder name
    contains spaces (Closes #85)